--- a/gui/gui.html
+++ b/gui/gui.html
@@ -219,7 +219,7 @@ R"##(<rml>
         </div>
 
         <div class="subtitle" style="margin-top: 20dp; display: block;">
-            唤醒方式
+            允许的唤醒方式
         </div>
         <div class="line">
             <div class="button" data-class-enabled="wakeMouse" data-event-click="wakeMouse = !wakeMouse; reloadConfigs();">鼠标</div>
