refactor: refine ui

--- a/gui/gui.html
+++ b/gui/gui.html
@@ -29,11 +29,12 @@ R"##(<rml>
 
 
             .decoBlock {
-                width: 100dp;
+                width: 60dp;
                 height: 6dp;
                 background: #fff;
                 display: block;
                 border-radius: 100dp;
+                opacity: 0.7;
             }
 
             .line {
