--- a/gui/gui.html
+++ b/gui/gui.html
@@ -31,10 +31,9 @@ R"##(<rml>
             .decoBlock {
                 width: 60dp;
                 height: 6dp;
-                background: #fff;
+                background: #574774;
                 display: block;
                 border-radius: 100dp;
-                opacity: 0.7;
             }
 
             .line {
@@ -77,35 +76,39 @@ R"##(<rml>
                 border-color: #ffffff33;
             }
 
+            .buttonBlock:last-child {
+                margin-right: 0;
+                flex: auto;
+            }
+
+            .buttonBlock:hover,
+            .button:hover {
+                background: #ffffff11;
+                border-color: #ffffff44;
+            }
+
+            .buttonBlock:active,
+            .button:active {
+                background: #ffffff22;
+                border-color: #ffffff55;
+            }
+
             .enabled {
                 background: #21002255;
                 border-color: #ffffff44;
                 box-shadow: 0dp 0dp 19dp 1dp #ffffff79;
             }
 
-            .buttonBlock:last-child {
-                margin-right: 0;
-                flex: auto;
+            .enabled:hover {
+                background: #21002277;
+                border-color: #ffffff66;
+                box-shadow: 0dp 0dp 19dp 1dp #ffffffb6;
             }
 
-            .buttonBlock:hover {
-                background: #ffffff33;
-                border-color: #ffffff44;
-            }
-
-            .buttonBlock:active {
-                background: #ffffff44;
+            .enabled:active {
+                background: #21002233;
                 border-color: #ffffff55;
-            }
-
-            .button:hover {
-                background: #ffffff33;
-                border-color: #ffffff44;
-            }
-
-            .button:active {
-                background: #ffffff44;
-                border-color: #ffffff55;
+                box-shadow: 0dp 0dp 19dp 1dp #ffffff79;
             }
 
             .buttonBlock>.icon {
@@ -155,54 +158,74 @@ R"##(<rml>
                 </div>
                 <div class="right">
                     <div class="desc">
-                        睡眠守护
+                        {{english ? 'Daemon' : '睡眠守护'}}
                     </div>
                     <div class="desc expl">
-                        {{daemonEnabled ? '已启动' : '未启动'}}
+                        {{
+                        english ?
+                        (daemonEnabled ? 'Enabled' : 'Disabled') :
+                        (daemonEnabled ? '已启动' : '未启动')
+                        }}
                     </div>
                 </div>
             </div>
 
-            <div class="buttonBlock">
+            <div class="buttonBlock" data-class-enabled="runOnStartup" data-event-click="setStartup(!runOnStartup)">
                 <div class="right">
                     <div class="desc">
-                        开机自启
+                        {{
+                        english ? 'Start on startup' : '开机自启'
+                        }}
                     </div>
                     <div class="desc expl">
-                        还没写
+                        {{
+                            english ? (
+                                runOnStartup ? 'Enabled' : 'Disabled'
+                            ) : (
+                                runOnStartup ? '已启用' : '未启用'
+                            )
+                        }}
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="subtitle" style="margin-top: 20dp; display: block;">
-            配置
+            {{english ? 'Configuration' : '配置'}}
         </div>
 
         <div class="buttonBlock" data-class-enabled="keepSleep"
             data-event-click="keepSleep = !keepSleep; reloadConfigs();">
-            <div class="icon">
-                K
+            <div class="icon" data-if="!english">
+                歇
             </div>
             <div class="right">
                 <div class="desc">
-                    保持睡眠
+                    {{
+                    english ? 'Keep Asleep' : '保持睡眠'
+                    }}
                 </div>
                 <div class="desc expl">
-                    如果在睡眠期间醒来，自动重新睡眠
+                    {{
+                    english ? 'If woken up during sleep, sleep again' : '如果在睡眠期间醒来，自动重新睡眠'
+                    }}
                 </div>
             </div>
         </div>
 
-        <div class="line">
+        <div data-class-line="!english">
             <div class="buttonBlock" data-class-enabled="disableDevices"
                 data-event-click="disableDevices = !disableDevices; reloadConfigs();">
                 <div class="right">
                     <div class="desc">
-                        关闭设备
+                        {{
+                        english ? 'Disable devices' : '关闭设备'
+                        }}
                     </div>
                     <div class="desc expl">
-                        禁用鼠标、触控板等
+                        {{
+                        english ? 'Disable devices like mouse, touchpad, etc.' : '禁用鼠标、触控板等'
+                        }}
                     </div>
                 </div>
             </div>
@@ -210,34 +233,53 @@ R"##(<rml>
                 data-event-click="suspendProcesses = !suspendProcesses; reloadConfigs();">
                 <div class="right">
                     <div class="desc">
-                        暂停进程
+                        {{english ? 'Suspend Processes' : '暂停进程'}}
                     </div>
                     <div class="desc expl">
-                        暂停大部分软件活动
+                        {{english ? 'Suspend most software activities' : '暂停大部分软件活动'}}
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="subtitle" style="margin-top: 20dp; display: block;">
-            允许的唤醒方式
+            {{english ? 'Allowed Wake Up Methods' : '允许的唤醒方式'}}
         </div>
         <div class="line">
-            <div class="button" data-class-enabled="wakeMouse" data-event-click="wakeMouse = !wakeMouse; reloadConfigs();">鼠标</div>
-            <div class="button" data-class-enabled="wakeKeyboard" data-event-click="wakeKeyboard = !wakeKeyboard; reloadConfigs();">键盘
+            <div class="button" data-class-enabled="wakeMouse"
+                data-event-click="wakeMouse = !wakeMouse; reloadConfigs();">
+                {{english ? 'Mouse' : '鼠标'}}
             </div>
-            <div class="button" data-class-enabled="wakeTouchPad" data-event-click="wakeTouchPad = !wakeTouchPad; reloadConfigs();">触控板
+            <div class="button" data-class-enabled="wakeKeyboard"
+                data-event-click="wakeKeyboard = !wakeKeyboard; reloadConfigs();">
+                {{english ? 'Keyboard' : '键盘'}}
             </div>
-            <div class="button" data-class-enabled="wakeOther" data-event-click="wakeOther = !wakeOther; reloadConfigs();">其它</div>
+            <div class="button" data-class-enabled="wakeTouchPad"
+                data-event-click="wakeTouchPad = !wakeTouchPad; reloadConfigs();">
+                {{english ? 'TouchPad' : '触控板'}}
+            </div>
+            <div class="button" data-class-enabled="wakeOther"
+                data-event-click="wakeOther = !wakeOther; reloadConfigs();">
+                {{english ? 'Other' : '其它'}}
+            </div>
         </div>
 
         <div class="subtitle" style="margin-top: 20dp; display: block;">
-            其它
+            {{english ? 'Other' : '其它'}}
         </div>
         <div class="line">
             <div class="button" data-event-click="openGithub()">Github</div>
             <div class="button" data-class-enabled="awayModeDisabled" data-event-click="awayModeDisabled = true;">
-                {{awayModeDisabled ? 'Away Mode 已禁用' : '禁用 Away Mode'}}
+                {{
+                english ? (
+                awayModeDisabled ? 'Away Mode Disabled' : 'Disable Away Mode'
+                ) : (
+                awayModeDisabled ? '离开模式已禁用' : '禁用 Away Mode'
+                )
+                }}
+            </div>
+            <div class="button" data-event-click="english = !english; resizeWin(english ? 450 : 390, english ? 670 : 600);">
+                {{english ? '中文' : 'English'}}
             </div>
         </div>
     </body>
